--- a/A_dbms/templates/dbms/agree/agree_board/counter/_c/1-scope-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_c/1-scope-1.html
@@ -1,11 +1,13 @@
-{% if agree_obj.agree_typ == 1 %}
+{#AGREE_TYP_LIST = [(1, '单笔'), (2, '最高额'), (3, '保函'), (7, '小贷'),#}
+{#(41, '单笔(公证)'), (42, '最高额(公证)'), (47, '小贷(公证)')]#}
+{% if agree_typ == 1 or  agree_typ == 41 %}
     <p>1、甲方依据主合同和保证合同代为丙方清偿的全部债务；</p>
     <p>2、委托合同中约定的丙方应向甲方支付的担保费、违约金、赔偿金以及代偿资金占用费等（代偿资金
         占用费以代偿的全部债务为计算基数，从代偿后次日起按同期银行贷款基准利率<strong><u>4</u></strong>倍计算）；</p>
     <p>3、甲方因实现债权所发生的各项费用（包括但不限于诉讼费、差旅费、律师费、财产保全费、公证
         费、鉴定费、翻译费、评估拍卖费等）。</p>
     <p>4、甲方的其它费用和损失。</p>
-{% elif agree_obj.agree_typ == 2 %}
+{% elif agree_typ == 2 or agree_typ == 3 or agree_typ == 42 %}
     <p>1、甲方依据丙方与债权银行签订的借款合同及其他债权文件（以下简称“主债权合同”）和保证合同
         代为丙方清偿的全部债务（本金、利息、复息、丙方违约金和实现贷款人债权的费用等）。</p>
     <p>2、主合同中约定的丙方应向甲方支付的违约金、赔偿金以及代偿资金占用费等（代偿资金占用费以代偿的全
@@ -13,4 +15,9 @@
     <p>3、甲方因实现债权所发生的各项费用（包括但不限于诉讼费、差旅费、律师费、财产保全费、公证费、鉴定费、
         翻译费、评估拍卖费等）。</p>
     <p>本合同第一条与本条有冲突时以本条约定为准。</p>
+{% elif agree_typ == 7 or agree_typ == 47 %}
+    <p>？？？？？？？？？？？？？？？？？？？</p>
+    <p>？？？？？？？？？？？？？？？？？？？</p>
+    <p>？？？？？？？？？？？？？？？？？？？</p>
+    <p>？？？？？？？？？？？？？？？？？？？</p>
 {% endif %}
