--- a/A_dbms/templates/dbms/agree/agree_board/counter/_c/4-promise-y-1-3.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_c/4-promise-y-1-3.html
@@ -7,7 +7,27 @@
 {#WARRANT_TYP_LIST = [#}
 {#           (1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程'), (11, '应收账款'),#}
 {#           (21, '股权'), (31, '票据'), (41, '车辆'), (51, '动产'), (55, '其他'), (99, '他权')]#}
-{% if counter_typ in D_COUNTER_TYP_LIST %}
+{% if counter_typ in X_COUNTER_TYP_LIST %}
+    <p>1、已按有关规定和程序取得本合同反担保所需要的授权。</p>
+    <p>2、按要求向甲方提供真实、完整、有效的财务报表、公司章程或者其他相关资料、信息，并
+        接受甲方对保证人生产经营和财务状况的监督检查。定期或随时向甲方提供反映本企业生产
+        经营状况、资金、财务、债权债务情况的计划、统计、财务会计报表及有关文件资料（包括
+        资产负债表、现金流量表、纳税证明、损益表、债权债务表、固定资产明细表等），并保证
+        其真实性。</p>
+    <p>3、丙方未按主合同约定履行债务的，乙方自愿履行保证责任。</p>
+    <p><strong>4、乙方若出现下列情况之一时，应立即书面通知甲方：</strong></p>
+    <p>（1）乙方变更名称、住所地、法定代表人、联系方式等事项； </p>
+    <p>（2）乙方发生隶属关系变更、高层人事变动、公司章程修改，以及组织结构调整；</p>
+    <p>（3）乙方财务状况恶化、生产经营发生严重困难或者发生重大诉讼、仲裁事件；</p>
+    <p>（4）乙方停产、歇业、停业整顿或者被申请破产、重整等；</p>
+    <p>（5）乙方出现被撤销、被吊销营业执照、被责令关闭或者出现其他解散事由；</p>
+    <p>（6）乙方发生其他不利于债权人实现债权的情形。</p>
+    <p><strong>5、实施下列行为之一的，乙方提前十五日书面通知债权人并征得甲方书面同意：</strong></p>
+    <p><strong>（1）乙方改变资本结构或者经营体制，包括但不限于承包、租赁、股份制改造、联营、合
+        并、分立、合资、减资、资产转让、申请重整、申请和解、申请破产；</strong></p>
+    <p><strong>（2）乙方为第三人债务提供保证担保或者以其资产为自身或者第三人债务设定抵押、质押
+        担保，可能影响其履行本合同项下保证责任的。</strong></p>
+{% elif counter_typ in D_COUNTER_TYP_LIST %}
     <p>1、乙方已按有关规定和程序取得本合同担保所需的授权。</p>
     <p>2、乙方对抵押财产有充分、无争议的所有权或者处分权。</p>
     <p>3、抵押财产依法可以流通或者转让。</p>
@@ -58,26 +78,6 @@
     <p>（5）乙方申请破产、重整、和解或者被申请破产、重整。</p>
     <p>8、出质的权利不存在其他影响甲方实现质权的情形。</p>
     <p>9、甲方依本合同第六条处置出质权利时，乙方有充分配合的义务。</p>
-{% elif counter_typ in X_COUNTER_TYP_LIST %}
-    <p>1、已按有关规定和程序取得本合同反担保所需要的授权。</p>
-    <p>2、按要求向甲方提供真实、完整、有效的财务报表、公司章程或者其他相关资料、信息，并
-        接受甲方对保证人生产经营和财务状况的监督检查。定期或随时向甲方提供反映本企业生产
-        经营状况、资金、财务、债权债务情况的计划、统计、财务会计报表及有关文件资料（包括
-        资产负债表、现金流量表、纳税证明、损益表、债权债务表、固定资产明细表等），并保证
-        其真实性。</p>
-    <p>3、丙方未按主合同约定履行债务的，乙方自愿履行保证责任。</p>
-    <p><strong>4、乙方若出现下列情况之一时，应立即书面通知甲方：</strong></p>
-    <p>（1）乙方变更名称、住所地、法定代表人、联系方式等事项； </p>
-    <p>（2）乙方发生隶属关系变更、高层人事变动、公司章程修改，以及组织结构调整；</p>
-    <p>（3）乙方财务状况恶化、生产经营发生严重困难或者发生重大诉讼、仲裁事件；</p>
-    <p>（4）乙方停产、歇业、停业整顿或者被申请破产、重整等；</p>
-    <p>（5）乙方出现被撤销、被吊销营业执照、被责令关闭或者出现其他解散事由；</p>
-    <p>（6）乙方发生其他不利于债权人实现债权的情形。</p>
-    <p><strong>5、实施下列行为之一的，乙方提前十五日书面通知债权人并征得甲方书面同意：</strong></p>
-    <p><strong>（1）乙方改变资本结构或者经营体制，包括但不限于承包、租赁、股份制改造、联营、合
-        并、分立、合资、减资、资产转让、申请重整、申请和解、申请破产；</strong></p>
-    <p><strong>（2）乙方为第三人债务提供保证担保或者以其资产为自身或者第三人债务设定抵押、质押
-        担保，可能影响其履行本合同项下保证责任的。</strong></p>
 {% else %}
     <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
     <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
