--- a/A_dbms/templates/dbms/agree/agree_board/counter/_c/9-realize-1-3.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_c/9-realize-1-3.html
@@ -7,7 +7,31 @@
 {#WARRANT_TYP_LIST = [#}
 {#           (1, '房产'), (2, '房产包'), (5, '土地'), (6, '在建工程'), (11, '应收账款'),#}
 {#           (21, '股权'), (31, '票据'), (41, '车辆'), (51, '动产'), (55, '其他'), (99, '他权')]#}
-{% if counter_typ in D_COUNTER_TYP_LIST %}
+{% if counter_typ in X_COUNTER_TYP_LIST %}
+    <p>1、发生下列情形之一的，甲方有权要求乙方履行保证反担保责任：</p>
+    <p>（1）主合同项下债务履行期限届满，贷款人未受清偿，而要求甲方履行代偿义务的。“期限届满”包括主合
+        同项下债务履行期限届满，以及贷款人依照国家法律法规规定或者主合同的约定宣布主合同项下债权提前到
+        期的情形或甲方依据委托合同的相关规定要求丙方在规定的期限内提前偿还全部借款本息，同时要求贷款人
+        停止发放尚未划付的贷款、提前收回已发放的贷款本息的情形；</p>
+    <p>（2）乙方、丙方违反主合同、保证合同及本质押合同项下约定，致使贷款方要求甲方履行代偿义务的；</p>
+    <p>（3）乙方、丙方被撤销、吊销营业执照、责令关闭或者出现其他解散事由；</p>
+    <p>（4）乙方、丙方被人民法院受理破产申请或者裁定和解；</p>
+    <p>（5）乙方、丙方死亡、被宣告失踪或死亡或乙方、丙方作为法人消灭； </p>
+    <p>（6）乙方、丙方违反本合同项下义务；</p>
+    <p>（7）其他严重影响反担保权实现的情形。</p>
+    <p><strong>2、本合同所担保的债权同时存在物的反担保（含债务人或第三人提供）和保证反担保的，甲方可以就物的反担保
+        实现债权，也可以要求保证人承担保证责任。本合同所担保的债权同时存在两个以上物的反担保人的（含债务人
+        提供物的担保），甲方有权就其中任一或者各个担保物行使担保物权。甲方已经选择某一担保方式或担保物来实
+        现债权的，也可同时主张通过其他担保方式或担保物来实现全部或部分债权。</strong></p>
+    <p><strong>3、丙方或第三人提供了物的反担保的，甲方放弃该担保物权、担保物权顺位或者变更担保物权的，乙方同意
+        继续按本合同约定为主合同项下债权提供连带责任保证反担保。“该担保物权”是指丙方或第三人为委托合同项下债
+        权提供物的反担保所形成的担保物权。</strong></p>
+    <p>4、乙方为丙方与甲方之间存有的包括但不限于主合同项下的数笔债务提供担保，所清偿或抵充的债务的顺序如下：</p>
+    <p>（1）实现债权费用和代偿后代偿额应发生的利息；</p>
+    <p>（2）贷款方本息损失及甲方的代偿损失；</p>
+    <p>（3）甲方收取丙方<strong><u>5%</u></strong>的违约金；</p>
+    <p>（4）甲方代贷款方收缴其与丙方所约定的有关违约金；</p>
+{% elif counter_typ in D_COUNTER_TYP_LIST %}
     <p>1、发生下列事项之一时，甲方有权行使抵押权，可以与乙方协议以抵押财产折价，或者以拍卖、变卖抵押财
         产的价款优先受偿，或者<strong>有权申请法院依法强制执行抵押财产</strong>，所得价款不足以清偿本合同项下所担保的债
         权的，甲方可以选择将该款项用于归还本金、利息、罚息、复利或者费用等：</p>
@@ -88,31 +112,6 @@
     <p>（3）甲方收取丙方<strong><u>5%</u></strong>的违约金；</p>
     <p>（4）甲方代贷款方收缴其与丙方所约定的有关违约金；</p>
     <p>（5）补偿上述款项后，仍有剩余，剩余部分返还乙方。</p>
-{% elif counter_typ in X_COUNTER_TYP_LIST %}
-    <p>1、发生下列情形之一的，甲方有权要求乙方履行保证反担保责任：</p>
-    <p>（1）主合同项下债务履行期限届满，贷款人未受清偿，而要求甲方履行代偿义务的。“期限届满”包括主合
-        同项下债务履行期限届满，以及贷款人依照国家法律法规规定或者主合同的约定宣布主合同项下债权提前到
-        期的情形或甲方依据委托合同的相关规定要求丙方在规定的期限内提前偿还全部借款本息，同时要求贷款人
-        停止发放尚未划付的贷款、提前收回已发放的贷款本息的情形；</p>
-    <p>（2）乙方、丙方违反主合同、保证合同及本质押合同项下约定，致使贷款方要求甲方履行代偿义务的；</p>
-    <p>（3）乙方、丙方被撤销、吊销营业执照、责令关闭或者出现其他解散事由；</p>
-    <p>（4）乙方、丙方被人民法院受理破产申请或者裁定和解；</p>
-    <p>（5）乙方、丙方死亡、被宣告失踪或死亡或乙方、丙方作为法人消灭； </p>
-    <p>（6）乙方、丙方违反本合同项下义务；</p>
-    <p>（7）其他严重影响反担保权实现的情形。</p>
-    <p><strong>2、本合同所担保的债权同时存在物的反担保（含债务人或第三人提供）和保证反担保的，甲方可以就物的反担保
-        实现债权，也可以要求保证人承担保证责任。本合同所担保的债权同时存在两个以上物的反担保人的（含债务人
-        提供物的担保），甲方有权就其中任一或者各个担保物行使担保物权。甲方已经选择某一担保方式或担保物来实
-        现债权的，也可同时主张通过其他担保方式或担保物来实现全部或部分债权。</strong></p>
-    <p><strong>3、丙方或第三人提供了物的反担保的，甲方放弃该担保物权、担保物权顺位或者变更担保物权的，乙方同意
-        继续按本合同约定为主合同项下债权提供连带责任保证反担保。“该担保物权”是指丙方或第三人为委托合同项下债
-        权提供物的反担保所形成的担保物权。</strong></p>
-    <p>4、乙方为丙方与甲方之间存有的包括但不限于主合同项下的数笔债务提供担保，所清偿或抵充的债务的顺序如下：</p>
-    <p>（1）实现债权费用和代偿后代偿额应发生的利息；</p>
-    <p>（2）贷款方本息损失及甲方的代偿损失；</p>
-    <p>（3）甲方收取丙方<strong><u>5%</u></strong>的违约金；</p>
-    <p>（4）甲方代贷款方收缴其与丙方所约定的有关违约金；</p>
-
 {% else %}
     <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
     <p><strong>？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？？</strong></p>
