--- a/A_dbms/templates/dbms/agree/agree_board/counter/_s/0-pre.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/_s/0-pre.html
@@ -7,5 +7,4 @@
     称“委托合同”，合同编号：<strong><u>{{ agree_obj.agree_num }}</u></strong>）
     ，甲方就主合同项下丙方的债务向贷款人提供了连带责任保证担保，担保金额
     为：<strong>人民币本金<u>{{ agree_amount_cn }}</u>及其产生的法定利息、约定利息、复利、罚息、违约
-        金、赔偿金和实现债权的费用（包括但不限于诉讼费、律师费、公证费用、执行费
-        用等）。</strong></p>
+        金、赔偿金和实现债权的费用（包括但不限于诉讼费、律师费、公证费用、执行费用等）。</strong></p>
