--- a/A_dbms/templates/dbms/agree/agree_board/counter/d/8-regist-1.html
+++ b/A_dbms/templates/dbms/agree/agree_board/counter/d/8-regist-1.html
@@ -1,9 +1,9 @@
-{% if agree_obj.agree_typ == 1 %}
+{% if agree_typ == 1 %}
     <p>1、乙方应在本合同生效后<strong><u>五</u></strong>日内到有关登记机构办理抵押登记手续；抵押财产的他项权利证
         书、抵押登记文件或者其他权利证书由甲方占管。</p>
     <p>2、抵押反担保期间，如需登记机关办理变更登记的，乙方应及时到有关机关办理相应的变更登记手续。</p>
     <p>3、抵押反担保期间，甲方依本合同约定转让抵押权的，乙方应当协助甲方、受让人办理相应的变更登记手续。</p>
-{% elif agree_obj.agree_typ == 2 %}
+{% elif agree_typ == 2 %}
     <p>1、乙方应负责办理抵押登记手续，承担抵押登记费用，保证抵押的合法性。乙方在本合同签
         订之日将抵押物权属证明文件交给甲方，抵押期间该抵押物由乙方保管。本合同项下有关的
         评估、保险、鉴定、登记、保管、公证等费用均由乙方和丙方承担。</p>
