--- a/A_dbms/templates/dbms/provide/provide-notify-scan.html
+++ b/A_dbms/templates/dbms/provide/provide-notify-scan.html
@@ -9,10 +9,12 @@
         {% include 'dbms/provide/agree/notify/provide-notify-tab.html' %}
         {% include 'dbms/provide/modl/provide-add-mod.html' %}
         {% include 'dbms/provide/modl/provide-del-mod.html' %}
+        {% include 'dbms/provide/modl/notify-edit-mod.html' %}
     </div>
 {% endblock %}
 
 {% block extra-js %}
     {% include 'dbms/provide/extra/js-provide-add.html' %}
     {% include 'dbms/provide/extra/js-provide-del.html' %}
+    {% include 'dbms/provide/extra/js-notify-edit.html' %}
 {% endblock %}
