--- a/A_dbms/templates/dbms/agree/scan/tab/agree-result.html
+++ b/A_dbms/templates/dbms/agree/scan/tab/agree-result.html
@@ -3,7 +3,7 @@
         <thead>
         <tr style="text-align: center">
             <th>序号</th>
-            <th>客户名称</th>
+            <th>决议/声明人</th>
             <th>决议类型</th>
             <th>操作</th>
         </tr>
