--- a/A_dbms/templates/dbms/provide/modl/mod_form/notify-add.html
+++ b/A_dbms/templates/dbms/provide/modl/mod_form/notify-add.html
@@ -18,21 +18,21 @@
     </div>
 
     <div class="form-group"><!--借款合同-->
-        <label for="id_notify_money" class="col-sm-3 control-label">{{ form_notify_add.contracts_lease.label }}：</label>
+        <label for="id_contracts_lease" class="col-sm-3 control-label">{{ form_notify_add.contracts_lease.label }}：</label>
         <div class="col-sm-9">{{ form_notify_add.contracts_lease }}</div>
-        <label id="e_notify_money" class="pull-right">{{ form_notify_add.contracts_lease.errors }}</label>
+        <label id="e_contracts_lease" class="pull-right">{{ form_notify_add.contracts_lease.errors }}</label>
     </div>
 
     <div class="form-group"><!--保证合同-->
-        <label for="id_notify_date"
+        <label for="id_contract_guaranty"
                class="col-sm-3 control-label">{{ form_notify_add.contract_guaranty.label }}：</label>
         <div class="col-sm-9">{{ form_notify_add.contract_guaranty }}</div>
-        <label id="e_notify_date" class="pull-right">{{ form_notify_add.contract_guaranty.errors }}</label>
+        <label id="e_contract_guaranty" class="pull-right">{{ form_notify_add.contract_guaranty.errors }}</label>
     </div>
 
     <div class="form-group"><!--合同备注-->
-        <label for="id_notify_date" class="col-sm-3 control-label">{{ form_notify_add.remark.label }}：</label>
+        <label for="id_remark" class="col-sm-3 control-label">{{ form_notify_add.remark.label }}：</label>
         <div class="col-sm-9">{{ form_notify_add.remark }}</div>
-        <label id="e_notify_date" class="pull-right">{{ form_notify_add.remark.errors }}</label>
+        <label id="e_remark" class="pull-right">{{ form_notify_add.remark.errors }}</label>
     </div>
 </div>
