--- a/A_dbms/templates/dbms/provide/notify/scan/notify-summry.html
+++ b/A_dbms/templates/dbms/provide/notify/scan/notify-summry.html
@@ -1,7 +1,10 @@
 <div class="panel panel-default">
     <div class="panel-heading">
         <label>放款通知</label>
-        <label class="navbar-right"><a class="btn btn-danger btn-sm " id="addProvideB">放款</a></label>
+        <label class="navbar-right">
+            <a class="btn btn-primary btn-sm " id="addProvideB">放款</a>
+            <a class="btn btn-primary btn-sm " id="editNotifyB">修改</a>
+        </label>
     </div>
 
     <div class="panel-body row" style="padding: 1px;">{% include 'dbms/provide/notify/scan/notify-summry-body.html' %}</div>
