--- a/A_dbms/templates/dbms/agree/agree_board/entrust-single.html
+++ b/A_dbms/templates/dbms/agree/agree_board/entrust-single.html
@@ -28,7 +28,7 @@
     <div>{% include 'dbms/agree/agree_board/entrust/single/11-operation-1.html' %}</div>
     <p><strong>十二、通知送达条款</strong></p>
         {% include 'dbms/agree/agree_board/entrust/service-clause.html' %}
-    <p><strong>十三、其他</strong</p>
+    <p><strong>十三、其他</strong></p>
     {% include 'dbms/agree/agree_board/entrust/other.html' %}
 </div>
 
