--- a/A_dbms/templates/dbms/dun/overdu_seal/overdu-seal-filter.html
+++ b/A_dbms/templates/dbms/dun/overdu_seal/overdu-seal-filter.html
@@ -1,7 +1,8 @@
 <div>
     <label>
         <form class="navbar-form" style="display: inline">
-            <input type="search" name="_s" class="form-control" placeholder="搜索资产">
+            <input type="search" name="_s" class="form-control" placeholder="搜索资产"
+                   value="{{ search_key|default_if_none:'' }}">
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
