--- a/A_dbms/templates/dbms/provide/provide-scan.html
+++ b/A_dbms/templates/dbms/provide/provide-scan.html
@@ -9,6 +9,9 @@
         {% include 'dbms/provide/provide_scan/provide-tab.html' %}
         {% include 'dbms/provide/modl/repayment-add-mod.html' %}
         {% include 'dbms/provide/modl/repayment-del-mod.html' %}
+        {% include 'dbms/provide/modl/track-plan-mod.html' %}
+        {% include 'dbms/provide/modl/track-add-mod.html' %}
+        {% include 'dbms/provide/modl/track-del-mod.html' %}
         {% include 'dbms/dun/modl/compensatory-add-mod.html' %}
     </div>
 {% endblock %}
@@ -16,5 +19,8 @@
 {% block extra-js %}
     {% include 'dbms/provide/extra/js-repayment-add.html' %}
     {% include 'dbms/provide/extra/js-repayment-del.html' %}
+    {% include 'dbms/provide/extra/js-track-plan-add.html' %}
+    {% include 'dbms/provide/extra/js-track-add.html' %}
+    {% include 'dbms/provide/extra/js-track-del.html' %}
     {% include 'dbms/dun/extra/js-compensatory-add.html' %}
 {% endblock %}
