--- a/A_dbms/templates/dbms/provide/provide/provide-filter.html
+++ b/A_dbms/templates/dbms/provide/provide/provide-filter.html
@@ -19,7 +19,8 @@
 
     <label>
         <form class="navbar-form" style="display: inline">
-            <input type="search" name="_s" class="form-control" placeholder="客户,银行,合同">
+            <input type="search" name="_s" class="form-control" placeholder="客户,银行,合同"
+                   value="{{ search_key|default_if_none:'' }}">
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
