--- a/A_dbms/templates/dbms/provide/provide_scan/provide-summry.html
+++ b/A_dbms/templates/dbms/provide/provide_scan/provide-summry.html
@@ -2,6 +2,7 @@
     <div class="panel-heading">
         <label>放款情况</label>
         <label class="navbar-right">
+            <a class="btn btn-primary btn-sm " id="trackPlanB">跟踪计划 </a>
             <a class="btn btn-primary btn-sm " id="repaymentB">还款 </a>
             <a class="btn btn-primary btn-sm " id="compensatoryB">代偿 </a>
         </label>
