--- a/A_dbms/templates/dbms/agree/agree/agree-filter.html
+++ b/A_dbms/templates/dbms/agree/agree/agree-filter.html
@@ -18,7 +18,8 @@
     </label>
     <label>
         <form class="navbar-form" style="display: inline">
-            <input type="search" name="_s" class="form-control" placeholder="合同编号,客户,银行,纪要">
+            <input type="search" name="_s" class="form-control" placeholder="合同编号,客户,银行,纪要"
+                   value="{{ search_key|default_if_none:'' }}">
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
@@ -28,7 +29,7 @@
 
     {% if form_agree_add %}
         <label class="pull-right">
-{#            <a class="btn btn-success btn-sm" id="addAgree">添加合同</a>#}
+            {#            <a class="btn btn-success btn-sm" id="addAgree">添加合同</a>#}
         </label>
     {% endif %}
 </div>
