--- a/A_dbms/templates/dbms/appraisal/appraisal/appraisal-filter.html
+++ b/A_dbms/templates/dbms/appraisal/appraisal/appraisal-filter.html
@@ -20,7 +20,8 @@
     <label>
         <form class="navbar-form" style="display: inline">
             {#            {% csrf_token %}#}
-            <input type="search" name="_s" class="form-control" placeholder="客户、纪要，经理、助理、专员">
+            <input type="search" name="_s" class="form-control" placeholder="客户、纪要，经理、助理、专员"
+                   value="{{ search_key|default_if_none:'' }}">
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
