--- a/A_dbms/templates/dbms/dun/dun/dun-filter.html
+++ b/A_dbms/templates/dbms/dun/dun/dun-filter.html
@@ -18,7 +18,8 @@
     </label>
     <label>
         <form class="navbar-form" style="display: inline">
-            <input type="search" name="_s" class="form-control" placeholder="合同编号,客户,银行,纪要">
+            <input type="search" name="_s" class="form-control" placeholder="合同编号,客户,银行,纪要"
+                   value="{{ search_key|default_if_none:'' }}">
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
