--- a/A_dbms/templates/dbms/external/cooperative/cooperative-filter.html
+++ b/A_dbms/templates/dbms/external/cooperative/cooperative-filter.html
@@ -20,7 +20,8 @@
     {% endif %}
     <label>
         <form class="navbar-form" style="display: inline">
-            <input type="search" name="_s" class="form-control" placeholder="机构名称">
+            <input type="search" name="_s" class="form-control" placeholder="机构名称"
+                   value="{{ search_key|default_if_none:'' }}">
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
