--- a/A_dbms/templates/dbms/provide/notify/notify-filter.html
+++ b/A_dbms/templates/dbms/provide/notify/notify-filter.html
@@ -20,7 +20,8 @@
 
     <label>
         <form class="navbar-form" style="display: inline">
-            <input type="search" name="_s" class="form-control" placeholder="客户,银行,合同,借款合同，保证合同">
+            <input type="search" name="_s" class="form-control" placeholder="客户,银行,合同,借款合同，保证合同"
+                   value="{{ search_key|default_if_none:'' }}">
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
