--- a/A_dbms/templates/dbms/provide/provide_scan/provide-tab.html
+++ b/A_dbms/templates/dbms/provide/provide_scan/provide-tab.html
@@ -2,20 +2,28 @@
     <!-- Nav tabs -->
     <ul class="nav nav-tabs" role="tablist" style="background-color: #f5f5f5">
         <li role="presentation">
-            <a href="#provide-article" style="background-color: #f5f5f5" aria-controls="home" role="tab" data-toggle="tab">项目情况 </a></li>
+            <a href="#provide-article" style="background-color: #f5f5f5" aria-controls="home" role="tab"
+               data-toggle="tab">项目情况 </a></li>
         <li role="presentation" class="active">
-            <a href="#provide-repayment" style="background-color: #f5f5f5" aria-controls="home" role="tab" data-toggle="tab">还款 </a></li>
+            <a href="#provide-repayment" style="background-color: #f5f5f5" aria-controls="home" role="tab"
+               data-toggle="tab">还款 </a></li>
         <li role="presentation">
             <a href="#compensatory" style="background-color: #f5f5f5" aria-controls="home" role="tab" data-toggle="tab">代偿 </a>
+        <li role="presentation">
+            <a href="#track" style="background-color: #f5f5f5" aria-controls="home" role="tab"
+               data-toggle="tab">跟踪事项 </a>
         </li>
     </ul>
 
     <!-- Tab panes -->
     <div class="tab-content">
+        <div role="presentation" class="tab-pane" id="provide-article"> <!--项目情况-->
+            {% include 'dbms/provide/scan/tab/provide-article.html' %} </div>
         <div role="presentation" class="tab-pane active" id="provide-repayment"> <!--还款-->
             {% include 'dbms/provide/scan/tab/provide-repayment.html' %} </div>
         <div role="presentation" class="tab-pane" id="compensatory"> <!--代偿-->
             {% include 'dbms/provide/scan/tab/provide-compensatory.html' %} </div>
-
+        <div role="presentation" class="tab-pane" id="track"> <!--跟踪事项-->
+            {% include 'dbms/provide/scan/tab/provide-track.html' %} </div>
     </div>
 </div>
