--- a/A_dbms/templates/dbms/warrant/overdu_draft/overdu-draft-filter.html
+++ b/A_dbms/templates/dbms/warrant/overdu_draft/overdu-draft-filter.html
@@ -1,7 +1,8 @@
 <div>
     <label>
         <form class="navbar-form" style="display: inline">
-            <input type="search" name="_s" class="form-control" placeholder="编码，出票人，质押人">
+            <input type="search" name="_s" class="form-control" placeholder="编码，出票人，质押人"
+                   value="{{ search_key|default_if_none:'' }}">
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
