--- a/A_dbms/templates/dbms/warrant/overdu_evaluate/overdu-evaluate-filter.html
+++ b/A_dbms/templates/dbms/warrant/overdu_evaluate/overdu-evaluate-filter.html
@@ -18,7 +18,8 @@
     </label>
     <label>
         <form class="navbar-form" style="display: inline">
-            <input type="search" name="_s" class="form-control" placeholder="搜索权证编码">
+            <input type="search" name="_s" class="form-control" placeholder="搜索权证编码"
+                   value="{{ search_key|default_if_none:'' }}">
             <button type="submit" class="btn btn-primary btn-sm">搜索</button>
         </form>
     </label>
